<resources>
    <string name="app_name">Recipes</string>
    <string name="homescreen_random_meal">Random meal</string>
    <string name="homescreen_latest_meal">Latest meal</string>
    <string name="homescreen_category">Categories</string>
    <string name="homescreen_browse_by_category">Browse by category</string>
    <string name="homescreen_description_random_meal">This image shows a random meal</string>
    <string name="homescreen_description_latest_meal">This image shows the latest meal</string>
    <string name="homescreen_description_category">This image shows category icon</string>
    <string name="toolbar_home_title">Home</string>
    <string name="menu_search_title">Search</string>
    <string name="txt_default_title_description">Description</string>
    <string name="category_cuisine">Cuisine</string>
    <string name="category_meal_type">Meal Type</string>
    <string name="general_meal_default_title_instructions">Instructions</string>
    <string name="general_meal_default_title_ingredients">Ingredients</string>
    <string name="categories_title">Categories</string>
    <string name="txt_default_instructions_title">Instructions</string>
    <string name="recipes_title">Recipes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="button_save_favorites">Save</string>
    <string name="button_cancel_favorites">Cancel</string>
    <string name="favorites_description_title">Description</string>
    <string name="favorites_ingredients_title">Ingredients</string>
    <string name="favorites_hint_recipe_instructions">Enter recipe\'s instructions</string>
    <string name="favorites_hint_recipe_name">Enter recipe\'s name</string>
    <string name="enter_recipe_ingredients">Enter recipe\'s ingredients</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="my_recipes">My Recipes</string>
    <string name="your_recipes_title">Your Recipes</string>
    <string name="permission_camera_rationale">Recipes wants to use your Camera</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_camera_denied">Permission denied</string>
    <string name="permission_camera_neverask">Never ask again</string>
    <string name="general_meal_description_meal_type">Meal Type: </string>
    <string name="general_meal_description_cuisine">Cuisine: </string>
    <string name="error_message">Error</string>
    <string name="not_found_message">Not Found!</string>
    <string name="no_arguments_found">No Arguments Found!</string>
    <string name="ok_message">OK</string>
    <string name="favorites_recipes_toolbar">Favorite Recipes</string>
    <string name="recipe_already_added">Recipe is already added</string>
    <string name="recipe_added_to_favorites">Recipe added to favorites</string>
    <string name="recipe_was_removed">Recipe was removed</string>
    <string name="undo_button">UNDO</string>
    <string name="alert_dialog_mealtype">Could not load meal type categories!</string>
    <string name="alert_dialog_error">Error</string>
    <string name="alert_dialog_recipes_list_homescreen">Could not load recipes!</string>
    <string name="alert_dialog_general_meal_description">Recipe not found!</string>
    <string name="alert_dialog_cuisine">Could not load cuisine categories!</string>
    <string name="alert_dialog_favorites">Could not load favorite recipes!</string>
    <string name="alert_dialog_my_recipes_description">Could not load the recipe!</string>
    <string name="alert_dialog_add_recipe_to_favorites">Could not add recipe to favorites</string>
</resources>