<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_meal_favorites"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_dialog_fragment_height"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        tools:src="@drawable/cardview_random_meal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_meal_favorites"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_between_elements_default"
        app:srcCompat="@drawable/ic_photo_camera" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_layout_meal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fab_camera"
        android:hint="@string/favorites_hint_recipe_name">

        <EditText
            android:id="@+id/txt_favorites_meal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_default" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_layout_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_input_layout_meal_name"
        android:hint="@string/favorites_hint_recipe_instructions">

        <EditText
            android:id="@+id/edt_favorites_instructions_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_default"
            android:maxLines="3" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_layout_ingredietns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_input_layout_instructions"
        android:hint="@string/enter_recipe_ingredients">

        <EditText
            android:id="@+id/edt_favorites_ingredients_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_default"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/margin_between_elements_default"
        android:layout_marginRight="@dimen/margin_between_elements_default"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/button_cancel_favorites" />

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/margin_between_elements_default"
        android:layout_marginRight="@dimen/margin_between_elements_default"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_toStartOf="@id/btn_cancel"
        android:layout_toLeftOf="@id/btn_cancel"
        android:text="@string/button_save_favorites"
        android:textSize="@dimen/material_design_btn_txt_size" />

</RelativeLayout>